--- a/styles.css
+++ b/styles.css
@@ -20,20 +20,48 @@ body {
 }
 
 button {
+  appearance: none;
   background-color: #79cb15;
-  border: none;
-  border-radius: 5px;
+  border-radius: 40rem;
+  border-style: none;
+  box-shadow: #ADCFFF 0 -12px 6px inset;
+  box-sizing: border-box;
   color: #000000;
-  padding: 10px;
   cursor: pointer;
-  font-size: 16px;
+  display: inline-block;
+  font-family: -apple-system,sans-serif;
+  font-size: 1.2rem;
   font-weight: bold;
-  width: 110px;
+  letter-spacing: -.24px;
+  outline: none;
+  padding: 1rem 1.3rem;
+  quotes: auto;
+  text-align: center;
+  text-decoration: none;
+  transition: all .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 210px;
+  
 }
 
 button:hover {
-  opacity: 0.8;
+  background-color: #79cb15;
+  box-shadow: #FF6314 0 -6px 8px inset;
+  transform: scale(1.125);
 }
+
+button:active {
+  transform: scale(1.025);
+}
+
+@media (min-width: 700px) {
+  button {
+    font-size: 1.5rem;
+    padding: .75rem 2rem;
+  }
+} 
 
 ul {
   list-style: none;
