--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
   margin: 0;
@@ -9,10 +9,12 @@
 
 body {
   background-color: #000000;
+  width: 100%;
+  height: 100%;
 }
 
 .container-buttons {
-  margin: 30px 0;
+  padding: 20px 24px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -28,31 +30,29 @@ button {
   background-color: #79cb15;
   border-radius: 40rem;
   border-style: none;
-  box-shadow: #ADCFFF 0 -12px 6px inset;
+  box-shadow: #adcfff 0 -12px 6px inset;
   box-sizing: border-box;
   color: #000000;
   cursor: pointer;
-  display: inline-block;
 
   font-size: 1.2rem;
   font-weight: bold;
-  letter-spacing: -.24px;
+  letter-spacing: -0.24px;
   outline: none;
   padding: 1rem 1.3rem;
   quotes: auto;
   text-align: center;
   text-decoration: none;
-  transition: all .15s;
+  transition: all 0.15s;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
   width: 240px;
-  
 }
 
 button:hover {
   background-color: #79cb15;
-  box-shadow: #FF6314 0 -6px 8px inset;
+  box-shadow: #ff6314 0 -6px 8px inset;
   transform: scale(1.125);
 }
 
@@ -60,19 +60,14 @@ button:active {
   transform: scale(1.025);
 }
 
-@media (max-width: 700px) {
-  .container-buttons {
-    grid-template-columns: 15rem 9rem;
-    display: grid;
-  }
-
-} 
-
 ul {
+  margin: 0 auto;
+  max-width: 800px;
   list-style: none;
   display: grid;
-  grid-template-columns: 200px 200px 200px;
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
+  padding: 20px;
   justify-content: center;
 }
 
@@ -94,4 +89,34 @@ p {
 .item-price {
   font-weight: bold;
   color: #79cb15;
+}
+
+@media (max-width: 700px) {
+  .container-buttons {
+    margin: 0;
+    grid-template-columns: repeat(2, 1fr);
+    display: grid;
+    justify-items: center;
+    align-items: center;
+  }
+
+  ul {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 500px) {
+  .container-buttons {
+    justify-items: center;
+    align-items: center;
+    width: auto;
+    grid-template-columns: repeat(1, 1fr);
+    display: grid;
+    align-items: center;
+    justify-content: center;
+  }
+
+  ul {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
